[gd_scene load_steps=9 format=3 uid="uid://d0pd71tgyl6vy"]

[ext_resource type="Texture2D" uid="uid://b4xx36lxkvptj" path="res://src/Sprites that are Very Very Temporary/sharkRoom.png" id="1_5xkoa"]
[ext_resource type="Script" uid="uid://cnt4fhabgfpye" path="res://src/Scenes that are Very Very Temporary/sharko_room.gd" id="1_v044x"]
[ext_resource type="PackedScene" uid="uid://k8d3s46qphti" path="res://src/Characters/Boss/boss.tscn" id="3_v044x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5xkoa"]
size = Vector2(20, 362.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v044x"]
size = Vector2(261, 39.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3npyx"]
size = Vector2(260, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ubi7n"]
size = Vector2(594.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ttkin"]
size = Vector2(65, 20)

[node name="Room" type="Node2D"]
script = ExtResource("1_v044x")

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture_filter = 1
position = Vector2(320, 180)
texture = ExtResource("1_5xkoa")

[node name="Wall1" type="Area2D" parent="Area2D"]
visible = false

[node name="Wall" type="CollisionShape2D" parent="Area2D/Wall1" groups=["Wall"]]
position = Vector2(22, 177.75)
shape = SubResource("RectangleShape2D_5xkoa")

[node name="Wall2" type="Area2D" parent="Area2D"]
visible = false
position = Vector2(22, 177.75)

[node name="Wall2" type="CollisionShape2D" parent="Area2D/Wall2" groups=["Wall"]]
position = Vector2(595, 7.25)
shape = SubResource("RectangleShape2D_5xkoa")

[node name="Wall3" type="Area2D" parent="Area2D"]
visible = false
position = Vector2(320, 180)

[node name="Wall 4" type="CollisionShape2D" parent="Area2D/Wall3" groups=["Wall"]]
position = Vector2(-163, 165)
shape = SubResource("RectangleShape2D_v044x")

[node name="Wall5" type="Area2D" parent="Area2D"]
visible = false

[node name="Wall 5" type="CollisionShape2D" parent="Area2D/Wall5" groups=["Wall"]]
position = Vector2(482, 345.5)
shape = SubResource("RectangleShape2D_3npyx")

[node name="Wall4" type="Area2D" parent="Area2D"]
visible = false

[node name="Wall 3" type="CollisionShape2D" parent="Area2D/Wall4" groups=["Wall"]]
position = Vector2(324.75, 17)
shape = SubResource("RectangleShape2D_ubi7n")

[node name="Loading Zone" type="Area2D" parent="Area2D"]
visible = false
position = Vector2(320.5, 359)

[node name="LoadingZone" type="CollisionShape2D" parent="Area2D/Loading Zone"]
position = Vector2(-0.5, 11)
shape = SubResource("RectangleShape2D_ttkin")

[node name="Boss" parent="Area2D" instance=ExtResource("3_v044x")]
position = Vector2(388, 136)

[connection signal="area_entered" from="Area2D/Wall1" to="." method="_on_wall_1_area_entered"]
[connection signal="area_entered" from="Area2D/Wall2" to="." method="_on_wall_2_area_entered"]
[connection signal="area_entered" from="Area2D/Wall3" to="." method="_on_wall_3_area_entered"]
[connection signal="area_entered" from="Area2D/Wall5" to="." method="_on_wall_5_area_entered"]
[connection signal="area_entered" from="Area2D/Wall4" to="." method="_on_wall_4_area_entered"]
[connection signal="area_entered" from="Area2D/Loading Zone" to="." method="_on_loading_zone_entered"]
[connection signal="area_exited" from="Area2D/Loading Zone" to="." method="_on_loading_zone_exited"]
